--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>橘猫(=｀ω´=)——年轻人的建站服务</title>
     <link rel="stylesheet" href="./css/vivify.min.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_589009_mjsxdmzsllzestt9.css">
 </head>
 <body>
 <header>
@@ -78,21 +79,57 @@
         </li>
     </ul>
 </div>
+<div class="gard-box product-box">
+    <!--作品-->
+    <p class="gard-title"><span class="cat-icon">🐈</span>业务范畴</p>
+    <p class="product-text">网站策划，网站制作，网站优化，网络建设技术支持</p>
+    <div>
+        <ul class="product-content">
+            <li class="product-list">
+                <i class="iconfont icon-APPruanjiankaifa"></i>
+                <p>软件开发</p>
+            </li>
+            <li class="product-list">
+                <i class="iconfont icon-icon"></i>
+                <p>系统集成</p>
+            </li>
+            <li class="product-list">
+                <i class="iconfont icon-tubiaozhexiantu"></i>
+                <p>数据可视化服务</p>
+            </li>
+        </ul>
+        <ul class="product-content">
+            <li class="product-list">
+                <i class="iconfont icon-msnui-website"></i>
+                <p>网站设计、网站制作</p>
+            </li>
+            <li class="product-list">
+                <i class="iconfont icon-weixingongzhonghao"></i>
+                <p>微信公众号开发</p>
+            </li>
+            <li class="product-list">
+                <i class="iconfont icon-xiaochengxu"></i>
+                <p>微信小程序开发</p>
+            </li>
+        </ul>
+
+    </div>
+</div>
 <div class="gard-box work-box">
     <!--作品-->
     <p class="gard-title"><span class="cat-icon">🐈</span>工作室作品</p>
     <ul class="work-content">
         <li class="work-list">
             <img src="./img/work-jsk.png" alt="">
-            <p class="work-img-title">技术库——专业的程序员内容创作平台</p>
+            <p class="work-img-title">技术库——自由的程序员内容创作平台</p>
         </li>
         <li class="work-list text-left">
-            <img src="./img/work-jhzc.png" alt="">
-            <p class="work-img-title">技术库——专业的程序员内容创作平台</p>
+            <img src="./img/work-jhzc2.png" alt="">
+            <p class="work-img-title">某众创平台——创业者创业服务平台</p>
         </li>
         <li class="work-list">
-            <img src="./img/work-jsk.png" alt="">
-            <p class="work-img-title">技术库——专业的程序员内容创作平台</p>
+            <img src="./img/work-qnxt.jpg" alt="">
+            <p class="work-img-title">某单位驱鸟系统</p>
         </li>
         <li class="work-list text-left">
             <img src="./img/work-jsk.png" alt="">
@@ -100,10 +137,13 @@
         </li>
     </ul>
 </div>
-<div class="gard-box">
-    <!--作品-->
-    <p class="gard-title"><span class="cat-icon">🐈</span>业务范畴</p>
+<div class="gard-box link-us">
+  <!--  <p class="gard-title"><span class="cat-icon">🐈</span>联系橘猫</p>-->
 </div>
+<footer>
+    <a href="">技术库——自由的程序员内容创作平台</a>
+    <div class="to-right">©橘猫网络工作室</div>
+</footer>
 <script src="./js/vue.js"></script>
 <script>
     //浏览器窗口切换改页面标题
