--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </div>
 </div>
 <footer>
-    <a href="">技术库——自由的程序员内容创作平台</a>
+    <a href="">陇ICP备18000971号</a>
     <div class="to-right">©橘猫网络工作室</div>
 </footer>
 <!--usbox-->
